--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_todo
+name: day_pal
 description: "Open source note taking, day planning, event organizer, and task management app intended for personal use."
 
 # The following line prevents the package from being accidentally published to
