--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flutter_todo",
-    "short_name": "flutter_todo",
+    "name": "day_pal",
+    "short_name": "day_pal",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
