--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
   cuid2: ^3.1.0
+  calendar_date_picker2: ^1.1.7
 
 dev_dependencies:
   flutter_test:
