--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   path_provider: ^2.1.5
   path: ^1.9.0
 
+  flutter_spinkit: ^5.2.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
